Removed AJV Dependency.

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,8 @@
       </div>
    </div>
 </body>
-<script src="scripts/ajv.min.js"></script>
+<script src="scripts/lodash.js"></script>
+<script src="scripts/validator.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/uikit.min.js"></script>
 </html>
