--- a/public/schema.html
+++ b/public/schema.html
@@ -19,8 +19,7 @@
          <div uk-grid>
             <div class="uk-width-1-2">
                <code>
-                   { type: "object", properties: { smaller: { type: "number" }, larger: { type: "number" } }, required: ["smaller", "larger"]
-                  }
+                   { type:"object", properties: { smaller: { type: "number" }, larger: { type: "number" } } }
                </code>
                <br>
                <p>NOTE: The keys in the input must be enclosed in "" else it wont work.</p>
